--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- Изменение1 -->
-    <!-- Изменение2 -->
+    <!-- Изменение1 ветка1 -->
+    <!-- Изменение2 ветка1 -->
+    <!-- Изменение3 ветка1 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="UTF-8">
